# prompt-classifier

./: .gitignore  DATA_LICENSES.md  pyproject.toml
configs/: base.yaml  model1_tfidf_lr.yaml  model2_arctic_ffn.yaml  model3_roberta_frozen.yaml  model4_roberta_ft.yaml
notebooks/: 00_setup.ipynb  01_build_data.ipynb  02_eda.ipynb  03_dedup_inspection.ipynb  10_train_m1.ipynb  11_train_m2.ipynb  12_train_m3.ipynb  13_train_m4.ipynb  20_eval_all.ipynb  99_results.ipynb  _colab_bootstrap.py  run_all.ipynb
scripts/: build_unified.py  eval_all.py  make_splits.py  train.py
src/prompt_classifier/: config.py  seeds.py
src/prompt_classifier/data/: loaders.py  splits.py  unify.py
src/prompt_classifier/eval/: harness.py  metrics.py
tests/: test_loaders.py  test_metrics.py  test_unify.py
